# fortnite

./: Cargo.toml
src/: auth.rs  client.rs  errors.rs  http.rs  lib.rs  templates.rs  xmpp.rs
tests/: integration_tests.rs
