[package]
name = "fortnite"
version = "0.1.0"
authors = ["creator1372 <27164429+creator1372@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Fortnite api in rust"
homepage = "TBD"
documentation = "TBD"
repository = "TBD"
readme = "TBD"
keywords = ["fortnite", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }