[package]
name = "fortnite"
version = "0.1.3"
authors = ["creator1372 <27164429+creator1372@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Fortnite api in rust"
homepage = "https://github.com/creator1372/fortnite"
documentation = "https://github.com/creator1372/fortnite/blob/master/TBD"
repository = "https://github.com/creator1372/fortnite/"
readme = "TBD"
keywords = ["fortnite", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }